# umbrella_monitor

./: pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docker/: Containerfile  Dockerfile  build.sh  entrypoint.sh  manifest-build.sh  requirements.txt  vars.sh
release_notes/: v1.0.1.md  v1.0.3.md
src/umbrella_monitor/: __init__.py  __main__.py  toml_config_mgr.py
tests/: updater_test.py
