[project]
name = "umbrella_monitor"
version = "1.0.3"
description = "Python service to check and update Umbrella network IP addressing."
authors = [{name = "Thomas Dunteman", email= "git@learningtopi.com"}]
keywords = ["umbrella", "dns"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Internet :: Name Service (DNS)"]
dependencies = [
	"certifi==2026.1.4",
	"charset-normalizer==3.4.4",
	"exceptiongroup==1.3.1",
	"hvac==2.4.0",
	"idna==3.11",
	"iniconfig==2.3.0",
	"ipcalc==1.99.0",
	"logging-handler==1.0.7",
	"pluggy==1.6.0",
	"requests==2.32.5",
	"six==1.17.0",
	"tomli==2.4.0",
	"typing_extensions==4.15.0",
	"urllib3==2.6.3",
	"validators==0.35.0"]

[project.urls]
"homepage" = "https://www.learningtopi.com/python-modules-applications/umbrella_monitor/"
"bug tracker" = "https://github.com/LearningToPi/umbrella_monitor/issues"
"source code" = "https://github.com/LearningToPi/umbrella_monitor"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.deploy_manager]
test_mounts = "local/config.json:local/config.json"

